[gd_scene load_steps=42 format=3 uid="uid://dcoyolft5pi5d"]

[ext_resource type="Script" uid="uid://c3aingykbkqo6" path="res://enemy.gd" id="1_4gyqm"]
[ext_resource type="Texture2D" uid="uid://cg2v4u8d8ukra" path="res://craftpix-net-507107-free-soldier-sprite-sheets-pixel-art/Soldier_1/Walk.png" id="2_hb8ge"]
[ext_resource type="Texture2D" uid="uid://butmd6vyxehq1" path="res://craftpix-net-507107-free-soldier-sprite-sheets-pixel-art/Soldier_1/Attack.png" id="3_e1ltt"]
[ext_resource type="Texture2D" uid="uid://bj0k7i8eihbq2" path="res://craftpix-net-507107-free-soldier-sprite-sheets-pixel-art/Soldier_1/Dead.png" id="4_dxifv"]
[ext_resource type="Texture2D" uid="uid://bqo14xav4du2g" path="res://craftpix-net-507107-free-soldier-sprite-sheets-pixel-art/Soldier_1/Idle.png" id="5_pwjut"]
[ext_resource type="Texture2D" uid="uid://de6neo54igsmb" path="res://21564244-vermelho-exclamacao-marca-dentro-pixel-arte-estilo-vetor-removebg-preview.png" id="6_3yqyl"]
[ext_resource type="Texture2D" uid="uid://dsihao2rgb8se" path="res://craftpix-net-507107-free-soldier-sprite-sheets-pixel-art/Soldier_1/Run.png" id="6_n0g06"]
[ext_resource type="Texture2D" uid="uid://dk1c5h7w47lj0" path="res://luzSprite.webp" id="8_hb8ge"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ar8e5"]
atlas = ExtResource("2_hb8ge")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_doop2"]
atlas = ExtResource("2_hb8ge")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5hcft"]
atlas = ExtResource("2_hb8ge")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_nnovl"]
atlas = ExtResource("2_hb8ge")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_jmwgi"]
atlas = ExtResource("2_hb8ge")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2u8i"]
atlas = ExtResource("2_hb8ge")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_otto8"]
atlas = ExtResource("2_hb8ge")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8q82m"]
atlas = ExtResource("3_e1ltt")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_epc7x"]
atlas = ExtResource("3_e1ltt")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_o7rgc"]
atlas = ExtResource("3_e1ltt")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdav3"]
atlas = ExtResource("4_dxifv")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_jpbtr"]
atlas = ExtResource("4_dxifv")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qgdfx"]
atlas = ExtResource("4_dxifv")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qku5p"]
atlas = ExtResource("4_dxifv")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1fjw"]
atlas = ExtResource("5_pwjut")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_b5wqg"]
atlas = ExtResource("5_pwjut")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hgro5"]
atlas = ExtResource("5_pwjut")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_18rq2"]
atlas = ExtResource("5_pwjut")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ccdwq"]
atlas = ExtResource("5_pwjut")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0jgdh"]
atlas = ExtResource("5_pwjut")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6wg26"]
atlas = ExtResource("5_pwjut")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qskgw"]
atlas = ExtResource("6_n0g06")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_g3onx"]
atlas = ExtResource("6_n0g06")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_o707m"]
atlas = ExtResource("6_n0g06")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_difxq"]
atlas = ExtResource("6_n0g06")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5tv8x"]
atlas = ExtResource("6_n0g06")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_jnl6c"]
atlas = ExtResource("6_n0g06")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_lv0vf"]
atlas = ExtResource("6_n0g06")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6fu1e"]
atlas = ExtResource("6_n0g06")
region = Rect2(896, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_e1ltt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ar8e5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_doop2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5hcft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nnovl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jmwgi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2u8i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_otto8")
}],
"loop": true,
"name": &"andar",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8q82m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_epc7x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o7rgc")
}],
"loop": false,
"name": &"ataque",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdav3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jpbtr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qgdfx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qku5p")
}],
"loop": false,
"name": &"die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l1fjw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b5wqg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hgro5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_18rq2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ccdwq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0jgdh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6wg26")
}],
"loop": true,
"name": &"idle",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qskgw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g3onx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o707m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_difxq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5tv8x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jnl6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lv0vf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6fu1e")
}],
"loop": true,
"name": &"run",
"speed": 11.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_epg4t"]
radius = 11.0
height = 44.0

[sub_resource type="CircleShape2D" id="CircleShape2D_qi2p4"]
radius = 119.151

[sub_resource type="RectangleShape2D" id="RectangleShape2D_epg4t"]
size = Vector2(59, 5)

[node name="CharacterBody2D" type="CharacterBody2D" groups=["enemy"]]
texture_filter = 1
script = ExtResource("1_4gyqm")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(4, 7)
scale = Vector2(0.695313, 0.695313)
sprite_frames = SubResource("SpriteFrames_e1ltt")
animation = &"run"
autoplay = "idle"

[node name="colisão" type="CollisionShape2D" parent="."]
position = Vector2(3, 30)
shape = SubResource("CapsuleShape2D_epg4t")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="visão" type="Area2D" parent="."]

[node name="area da visão" type="CollisionShape2D" parent="visão"]
position = Vector2(-1, 4)
shape = SubResource("CircleShape2D_qi2p4")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Hitbox" type="Area2D" parent="."]
position = Vector2(4, 18)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(-1, -1)
shape = SubResource("RectangleShape2D_epg4t")

[node name="WindupTimer" type="Timer" parent="."]

[node name="AccelerationTimer" type="Timer" parent="."]

[node name="Exclamacao" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(3, -4)
scale = Vector2(0.0723298, 0.0723298)
texture = ExtResource("6_3yqyl")

[node name="ExclamacaoTimer" type="Timer" parent="."]

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(2.5, 17)
scale = Vector2(0.587254, 0.587254)
color = Color(0.873478, 0, 0.14886, 1)
energy = 0.6
texture = ExtResource("8_hb8ge")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="visão" to="." method="_on_visão_body_entered"]
[connection signal="body_exited" from="visão" to="." method="_on_visão_body_exited"]
